# study-apps

!dima/max_units_per_track/: fileOut.txt  main  main.cpp
Cmake_build/: CMakeLists.txt  main.cpp  main_test.cpp  my_lib.cpp  my_lib.h
Cmake_language/: CMakeLists.txt  CMakeLists2.txt  my_lib_bye.h
animal_factory_linux/: main  main.cpp
asm/: Makefile  main.cpp  main.s
bazel/: WORKSPACE  manual.txt
bazel/cube/: BUILD  cube.cc  cube.h
bazel/main/: BUILD  main.cc
bazel/perf-tests/: BUILD  perf_tests.py
bazel/py_lib/: BUILD  py_lib.py
bazel/square/: BUILD  square.cc  square.h
bazel/test/: BUILD  square_unittest.cc
cpp_projects/Project1/: a.out  main.cpp
cpp_projects/Section13_OOP/constInClass/: main.cpp
cpp_projects/Section17_SmartPointers/SmartPointers_SharedPointers/: main.cpp
cpp_projects/Section17_SmartPointers/SmartPointers_WeakPointers/: main.cpp
cpp_projects/Section19_STRIMS/io_manip_bool/: main  main.cpp
cpp_projects/Section19_STRIMS/io_manip_int/: main  main.cpp
cpp_projects/VSCODE/test_cpp/: double.cpp  main  main.cpp
cpp_projects/section11/: section11.workspace
cpp_projects/section11/.codelite/: section11.session
cpp_projects/section11/functionDefaultArgumentValue/: compile_flags.txt  functionDefaultArgumentValue.mk  functionDefaultArgumentValue.project  main.cpp
cpp_projects/section11/functionDefaultArgumentValue/Debug/: functionDefaultArgumentValue
cpp_projects/section11/math_lib/: main.cpp
cpp_projects/test_vscode/src/: func.cpp  func.h  main  main.cpp
double_assignment/: main  main.cpp
fork/: Makefile  cube  cube.cpp  parent  parent.cpp  sqr  sqr.cpp
fork2/: Makefile  parent  parent.cpp  sua
gcc_options/: main  main.cpp
graph/: main  main.cpp
leetcode/bash_valid-phone-numbers/: bash  file_pattern.txt
leetcode/brackets_check/: main  main.cpp
leetcode/cnt_chars_in_last_word/: main  main.cpp
leetcode/common_str_prefix/: main  main.cpp
leetcode/duplicate_numbers_remove/: main.cpp
leetcode/excel-sheet-column-title/: main  main.cpp
leetcode/maximum_subarray/: main  main.cpp
leetcode/meeting_rooms/: main  main.cpp
leetcode/needle_in_haystack/: main  main.cpp
leetcode/palindrome/: main  main.cpp
leetcode/palindrome_permutation/: main  main.cpp
leetcode/remove_duplicates_in_sorted_list/: main  main.cpp
leetcode/roman_to_integer/: main  main.cpp
leetcode/single_element/: main  main.cpp
leetcode/strobogrammatic_number/: main  main.cpp
leetcode/two-sum-iii-data-structure-design/: main  main.cpp
leetcode/words_shortest_distance/: main  main.cpp
leetcode/words_shortest_distanceII/: main  main.cpp
linux_driver/: Makefile  hello.c
makefiles/: CMakeLists.txt  Makefile  my_lib_bye.cpp  prog
mpu6050/: Makefile
multithreading/: Makefile  main  main.cpp
nvidia/Data/: HierarchyTest.txt  HierarchyTest_output_BFS.txt  HierarchyTest_output_DFS_sorted.txt
nvidia/project/: Test  main  main.cpp
okama_test/: VAST_RUB_portfolios.ipynb
python_example/: main.py  pd_merge.py
read_file_str_trim/: file.txt  main  main.cpp
semaphore/: Makefile  main.cpp
std_thread/: main  main.cpp
std_thread_mutex_conditional/: main  main.cpp
test_cpp/cpp_constr_delete/: main  main.cpp
test_cpp/cpp_style_string/: main.cpp  origin.txt  out_file.txt
test_cpp/struct_size/test/: main  main.cpp
test_cpp/test_2d_array_ptr/: main  main.cpp
test_cpp/test_func_ptr/: main  main.cpp
test_cpp/test_malloc/: main  main.cpp
udp_pipe_examples/: sip_agent.cpp  sip_agent.h
ulimited_fork_danger/: a.out  parent.cpp  parent_maniak
virtual_destructor/: main  main.cpp
yandex_test/yandex_test_base/: main  main.cpp
yandex_test/yandex_test_base_ut_-D/: allocator.cpp  allocator.h  config  config.h  main  main.cpp  unit_tests  unit_tests.cpp  unit_tests.h
yandex_test/yandex_test_base_ut_-D_multithread/: allocator  allocator.cpp  main.cpp  unit_tests  unit_tests.cpp
